--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
-version: "2.3"
+version: "3.9"
+
+name: 'quiz'
 
 services:
   web:
@@ -54,6 +56,42 @@ services:
       retries: 3
     restart: always
 
+  broker:
+    image: rabbitmq:3.9.12-alpine
+    container_name: broker
+    volumes:
+      - rabbit_volume:/var/lib/rabbitmq
+    env_file:
+      - .env_prod
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    restart: always
+
+  worker:
+    build: .
+    container_name: worker
+    command: sh -c "celery -A core worker --concurrency=20 --loglevel=info"
+    env_file:
+      - .env_prod
+    depends_on:
+      broker:
+        condition: service_healthy
+    restart: always
+
+  scheduler:
+    build: .
+    container_name: scheduler
+    command: sh -c "celery -A core beat -l info"
+    env_file:
+      - .env_prod
+    depends_on:
+      broker:
+        condition: service_healthy
+    restart: always
+
 volumes:
   db_data_volume:
     name: quiz_data
@@ -61,3 +99,5 @@ volumes:
     name: quiz_static
   media_volume:
     name: quiz_media
+  rabbit_volume:
+    name: quiz_broker
